# LibraryManager

./: .gitignore  CMakeLists.txt  README.md
data/: books.json  users.json
include/: AVLTree.h  BST.h  BSTNode.h  Book.h  Library.h  LibraryException.h  Logger.h  User.h  exceptions.h
src/: Book.cpp  Library.cpp  Logger.cpp  Main.cpp  User.cpp
tests/: tests.cpp
